--- a/app/views/requistions/new.html.erb
+++ b/app/views/requistions/new.html.erb
@@ -41,7 +41,7 @@
 			<div class="form-group">
 				<label class=" col-xs-3">Телефон контактного лица заказчика</label>
 				<div class="col-xs-5">
-				<%= f.text_field :contact_phone, :placeholder =>"Ввведите контактный телефон", class: "form-control", required: "" %>
+				<%= f.text_field :contact_phone, :placeholder =>"Ввведите контактный телефон", class: "form-control phonemask", required: "" %>
 				</div>
 			</div>
 		</div>
