--- a/app/views/bosses/index.html.erb
+++ b/app/views/bosses/index.html.erb
@@ -5,11 +5,13 @@
 	<div class="col-xs-3">
 	</div>
 		<div class="col-xs-6">
-		<table class="table">
+		<table class="table table-striped table-wrapper">
 			<thead>
 				<tr>
 					<th>Имя</th>
 					<th>Телефон</th>
+					<th>Район</th>
+					<th>Специализация</th>
 				</tr>
 			</thead>    
 		    <tbody>	  	
