--- a/app/views/static_pages/panel.html.erb
+++ b/app/views/static_pages/panel.html.erb
@@ -13,7 +13,11 @@
 				<%= link_to requistions_path, class:"btn" do %>
 				<span class="glyphicon glyphicon-list"></span>&nbsp Все заявки
 				<% end %>
-			
+
+				<%= link_to arrivals_path, class:"btn" do %>
+				<span class="glyphicon glyphicon-list"></span>&nbsp Все посещения
+				<% end %>			
+
 				<%= link_to users_path, class:"btn" do %>
 				<span class="glyphicon glyphicon-list"></span>&nbsp Клиенты
 				<% end %>
@@ -31,7 +35,7 @@
 				<% end %>
 			
 				<%= link_to bosses_path, class:"btn" do %>
-				<span class="glyphicon glyphicon-list"></span>&nbsp Все начльник
+				<span class="glyphicon glyphicon-list"></span>&nbsp Все начальники
 				<% end %>
 		</div>
 	</div>
