--- a/app/views/arrivals/index.html.erb
+++ b/app/views/arrivals/index.html.erb
@@ -54,7 +54,7 @@
 			<% while i<@date_to do %>
 				<tr>
 				<td><%= i.strftime("%d.%m.%Y")%></td>
-				<% @Arrivals_at_day = @result.select(:user_id).distinct.where('to_char(date, "YYYY-MM-DD", date) = ?', i.strftime("%Y-%m-%d")) %>	
+				<% @Arrivals_at_day = @result.select(:user_id).distinct.where('to_char(date, "YYYY-MM-DD") = ?', i.strftime("%Y-%m-%d")) %>	
 				<% @latecomers = User.where('status = 0 and id not in (?)	', @Arrivals_at_day) %>
 				<td>
 				<% @latecomers.each do |f|%>
