--- a/app/views/requistions/index.html.erb
+++ b/app/views/requistions/index.html.erb
@@ -130,27 +130,27 @@
     			<tr>
     				<th>Новая</th>
     				<td id='show_time_change_created'></td>
-    				<td>Клиент</td>
-    			</tr>
+    				<td id='show_who_created'>кто создал</td>
+       			</tr>
     			<tr>
     				<th>Назначена</th>
     				<td id='show_time_change_assigned'></td>
-    				<td>Администратор</td>
+    				<td id='show_who_assigned'></td>
     			</tr>
     			<tr>
     				<th>Принята</th>
     				<td id='show_time_change_adopted'></td>
-    				<td>Рабочий</td>
+    				<td id='show_who_adopted'></td>
     			</tr>
     			<tr>
     				<th>Выполняется</th>
     				<td id='show_time_change_running'></td>
-    				<td>Рабочий</td>
+    				<td id='show_who_running'></td>
     			</tr>
     			<tr>
     				<th>Исполнено</th>
     				<td id='show_time_change_done'></td>
-    				<td>Рабочий</td>
+    				<td id='show_who_done'></td>
     			</tr>
     			<tr>
     				<th>Отменена</th>
@@ -160,8 +160,8 @@
     			<tr>
     				<th>Выполнено</th>
     				<td id='show_time_change_completed'></td>
-    				<td>Рабочий</td>
-    			</tr>
+    				<td id='show_who_comleted'></td>
+       			</tr>
     			<tr>
     				<th>Дедлайн</th>
     				<td id='show_time_change_deadline'></td>
