--- a/app/assets/stylesheets/custom.css.scss.erb
+++ b/app/assets/stylesheets/custom.css.scss.erb
@@ -350,5 +350,11 @@ button.ColVis_Button, .form-control {
   text-shadow: none !important;
 }
 
+.manpanel {
+	margin-top: -7px;
+	.ddmenu {
+		font-size: 18px;
+	}
+}
 
 
