--- a/app/views/static_pages/panel.html.erb
+++ b/app/views/static_pages/panel.html.erb
@@ -39,7 +39,7 @@
 		<div class="btn-group-vertical" role="group">
 			<%= link_to "Создать нового администратора", '/admin_new', class:"btn" %>
 			<%= link_to "Создать нового рабочего(неактивно)", '/admin_new', class:"btn" %>
-			<%= link_to "Создать нового клиента(неактивно)", '/admin_new', class:"btn" %>
+			<%= link_to "Создать нового клиента(неактивно)", '/client_new', class:"btn" %>
 			<%= link_to "Создать нового начальника", '/bosses/new', class:"btn" %>
 			<%= link_to "Новый объект", {controller: "buildings", action: "new"}, class: "btn"%> 
 		</div>
