add user creation for admin

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,11 +28,6 @@ $(document).ready(function(){
 				<% end %>
 			</li>
 			
-<!-- 			<li class = "pull-right">
-				<%#= link_to panel_path do %>
-				<span class="glyphicon glyphicon-wrench"></span>&nbspПанель управления
-				<%# end %>
-			</li> -->
 
 						
 					<li class = "pull-right" role="presentation"><a href="<%= new_requistions_path %>">Новые заявки <span id="count" class="badge"></span></a></li>
@@ -85,13 +80,7 @@ $(document).ready(function(){
 
 
 								<li role="presentation">
-						    		<a href="/admin_new"><span class="glyphicon glyphicon-pencil"></span>&nbsp Создать нового администратора</a>
-						    	</li>
-						    	<li role="presentation">
-						    		<a href="/admin_new"><span class="glyphicon glyphicon-pencil"></span>&nbsp Создать нового рабочего(неактивно)</a>
-						    	</li>
-						    	<li role="presentation">
-						    		<a href="/admin_new"><span class="glyphicon glyphicon-pencil"></span>&nbsp Создать нового клиента(неактивно)</a>
+						    		<a href="/admin_new"><span class="glyphicon glyphicon-pencil"></span>&nbsp Создать нового пользователя</a>
 						    	</li>
 						    	<li role="presentation">
 						    		<a href="/bosses/new"><span class="glyphicon glyphicon-pencil"></span>&nbsp Создать нового начальника</a>
