--- a/app/views/static_pages/panel.html.erb
+++ b/app/views/static_pages/panel.html.erb
@@ -37,9 +37,7 @@
 	</div>
 	<div class="col-md-4">
 		<div class="btn-group-vertical" role="group">
-			<%= link_to "Создать нового администратора", '/admin_new', class:"btn" %>
-			<%= link_to "Создать нового рабочего(неактивно)", '/admin_new', class:"btn" %>
-			<%= link_to "Создать нового клиента(неактивно)", '/client_new', class:"btn" %>
+			<%= link_to "Создать нового пользователя", '/admin_new', class:"btn" %>
 			<%= link_to "Создать нового начальника", '/bosses/new', class:"btn" %>
 			<%= link_to "Новый объект", {controller: "buildings", action: "new"}, class: "btn"%> 
 		</div>
