--- a/app/views/users/admin_new.html.erb
+++ b/app/views/users/admin_new.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Добавление администратора') %>
+<% provide(:title, 'Создание нового пользователя') %>
 <div class="container">
 <div class="row">
 	<div class="col-xs-4">
@@ -22,7 +22,7 @@
 
 		<div class="form-group">
 			<label>Сотовый телефон</label>
-			<%= f.text_field :phone, class: "form-control", required: "" %>
+			<%= f.text_field :phone, class: "form-control phonemask", required: "" %>
 		</div>
 
 		<div class="form-group">
@@ -35,8 +35,16 @@
 			<%= f.password_field :password_confirmation, class: "form-control", required: "", minlength:"6" %>
 		</div>
 
+		<div class="form-group">
+			<label>Тип пользователя</label><br>
+
+				<input type="radio" name="status" value="admin" required  />Диспетчер<br />
+				<input type="radio" name="status" value="client" required />Клиент<br />
+				<input type="radio" name="status" value="worker" required />Рабочий<br />
+			</div>
+
 		<br>
-			<%= f.submit "Создать нового администратора", class: "btn btn-large btn-primary " %>
+			<%= f.submit "Создать", class: "btn btn-large btn-primary " %>
 		<br>
 		<% end %>
 	</div>
