--- a/app/views/buildings/index.html.erb
+++ b/app/views/buildings/index.html.erb
@@ -20,7 +20,7 @@
 				<% @buildings.each do |b| %>
 					<tr>
 						<td><%= b.id %></td>
-						<th><% b.contracts.select('company').distinct.each do |company| %> <%= company.company %> <% end %> </th>
+						<th><% b.contracts.first.company if  b.contracts.first %> </th>
 						<td><%= link_to b.arrival_address,  {:action => :show, :id => b.id}, {:method => :get} %></td>
 						<td><%= b.contact_name %></td>
 						<td><%= b.contact_phone %></td>						
