--- a/app/views/requistions/new.html.erb
+++ b/app/views/requistions/new.html.erb
@@ -50,19 +50,32 @@
 			<div class="form-group">
 			<label class=" col-xs-3">Тип работ</label>
 			<div class="col-xs-5">
-				<%= f.select :type_requistion, [['Электрика', 'Э'], ['Сантехника ГВС', 'Г'], ['Сантехника ХВС', 'X'], ['Канализация', 'К'], ['Отопление', 'О'], ['АПС', 'П'], ['АУУ', 'У'], ['Видеокамера', 'В'], ['Системы дымоудаления', 'C'], ['Видеодомофон', 'Д'], ['Аварийное обслуживание', 'А'], ['Другое', 'Д']], { :prompt => "Выберите из списка" }, { :class => "form-control", required: ""  }  %>
+				<%= f.select :type_requistion, [['АВАРИЯ (ЦО/ГВС/ХВС/Канализация)', 'Э'], 
+											['РЕМОНТ (ЦО/ГВС/ХВС/Канализация)', 'Г'], 
+											['АВАРИЯ (ЭЛЕКТРОСЕТИ)', 'X'], 
+											['РЕМОНТ (ЭЛЕКТРОСЕТИ)', 'К'], 
+											['АВАРИЯ (ВЕНТИЛЯЦИЯ/ДЫМОУДАЛЕНИЕ/ТС)', 'О'], 
+											['РЕМОНТ (ВЕНТИЛЯЦИЯ/ДЫМОУДАЛЕНИЕ/ТС)', 'П'], 
+											['АВАРИЯ СЛАБОТОЧНЫХ СИСТЕМ (АПС, СТРЕЛЕЦ, КТС, ДОМОФОН, ВИДЕО)', 'У'], 
+											['ТО СЛАБОТОЧНЫХ СИСТЕМ (АПС, СТРЕЛЕЦ, КТС, ДОМОФОН, ВИДЕО)', 'В'], 
+											['ТО ВЕНТИЛЯЦИИ/ВОЗД.ОТОПЛЕНИЯ', 'C'], 
+											['ТО АУУ (ОТОПЛЕНИЕ)', 'Д'], 
+											['ТО СИСТЕМ КОНДИЦИОНИРОВАНИЯ', 'А'], 
+											['ТО ВОДОПОДГОТОВКИ БАССЕЙНОВ', 'Д'],
+											['ОПРЕССОВКА ТРУБОПРОВОДОВ', 'А'], 
+											['ГАРАНТИЙНОЕ ОБСЛУЖИВАНИЕ', 'Д']], { :prompt => "Выберите из списка" }, { :class => "form-control", required: ""  }  %>
 			</div>
 			</div>
 		</div>
 
-		<div class="row">
+<!-- 		<div class="row">
 			<div class="form-group" id="subtype" style="display:none">
 			<label class=" col-xs-3">Тип аварийных работ</label>
 			<div class="col-xs-5">
-				<%= f.select :subtype_requistions, [['Электрика', 'Э'], ['Сантехника ГВС', 'Г'], ['Сантехника ХВС', 'X'], ['Канализация', 'К'], ['Отопление', 'О'], ['АПС', 'П'], ['АУУ', 'У'], ['Видеокамера', 'В'], ['Системы дымоудаления', 'C'], ['Видеодомофон', 'Д'], ['Другое', 'Д']], { :prompt => "Выберите из списка" }, { :class => "form-control" }  %>
+				<%#= f.select :subtype_requistions, [['Электрика', 'Э'], ['Сантехника ГВС', 'Г'], ['Сантехника ХВС', 'X'], ['Канализация', 'К'], ['Отопление', 'О'], ['АПС', 'П'], ['АУУ', 'У'], ['Видеокамера', 'В'], ['Системы дымоудаления', 'C'], ['Видеодомофон', 'Д'], ['Другое', 'Д']], { :prompt => "Выберите из списка" }, { :class => "form-control" }  %>
 			</div>
 			</div>
-		</div>
+		</div> -->
 
 		<div class="row">
 			<div class="form-group" id="info" style="display:none">
