рабочий -> исполнитель/сотрудник

--- a/app/views/arrivals/index.html.erb
+++ b/app/views/arrivals/index.html.erb
@@ -13,7 +13,7 @@
 <table id="arrivals" class="table table-striped">
 	<thead>
 		<tr>
-			<th>Рабочий</th>
+			<th>Иполнитель</th>
 			<th>Объект</th>
 			<th>Время</th>
 		</tr>
@@ -46,7 +46,7 @@
 	<thead>
 		<tr>
 			<th>Дата</th>
-			<th>Рабочие</th>
+			<th>Сотрудники</th>
 		</tr>
 	</thead>    
     <tbody>
