--- a/app/views/static_pages/panel.html.erb
+++ b/app/views/static_pages/panel.html.erb
@@ -23,7 +23,7 @@
 				<% end %>
 			
 				<%= link_to workers_path, class:"btn" do %>
-				<span class="glyphicon glyphicon-list"></span>&nbsp Рабочие
+				<span class="glyphicon glyphicon-list"></span>&nbsp Сотрудники
 				<% end %>
 			
 				<%= link_to contracts_path, class:"btn" do %>
