--- a/app/views/users/admin_new.html.erb
+++ b/app/views/users/admin_new.html.erb
@@ -40,7 +40,7 @@
 
 				<input type="radio" name="status" value="admin" required  />Диспетчер<br />
 				<input type="radio" name="status" value="client" required />Клиент<br />
-				<input type="radio" name="status" value="worker" required />Рабочий<br />
+				<input type="radio" name="status" value="worker" required />Исполнитель<br />
 			</div>
 
 		<br>
