--- a/app/views/users/workers.html.erb
+++ b/app/views/users/workers.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "Рабочие") %>
 <div class="container">	
-	<h1>Рабочие</h1>
+	<h1>Сотрудники</h1>
 	<div class="row">
 		<div class = 'col-xs-1'>
 		</div>
@@ -60,7 +60,7 @@
 				<td>
 
 					<div class = "pull-right">
-					<%= link_to 'Заявки рабочего', controller: :requistions, action: :index, position: 12, value: user.id%>
+					<%= link_to 'Заявки сотрудника', controller: :requistions, action: :index, position: 12, value: user.id%>
 
 						<%= link_to user_path(user) do%>
 							<span class="glyphicon glyphicon-pencil" title="редактировать"></span>
