--- a/app/views/requistions/new.html.erb
+++ b/app/views/requistions/new.html.erb
@@ -27,7 +27,22 @@
 
 			</div>
 		</div>
-		 	
+		
+		<div class="row">
+	 		<div class="form-group">
+		  		<table class="table table-bordered table-striped">
+				  <tr>
+				    <th>Объект</th>
+				    <td>@requistion.object </td>
+				  </tr>
+				  <tr>
+				    <th>Адрес вызова</th>
+				    <td>@requistion.building.arrival_address </td>
+				</table>
+			</div>
+		</div>
+
+
 	 	<div class="row">
 			<div class="form-group">
 				<label class=" col-xs-3">ФИО контактного лица заказчика</label>
