--- a/app/views/requistions/new.html.erb
+++ b/app/views/requistions/new.html.erb
@@ -17,7 +17,7 @@
 				<label class=" col-xs-3">Адресс прибытия для специалистов</label>
 				<div class="col-xs-5">
 				<%= f.select :building_id, 
-				options_for_select(@list.collect {|p| [ (p.name.to_s + " || " + p.arrival_address.to_s), p.id ] }), 
+				options_for_select(@list.collect {|p| [ (p.name.to_s + " - " + p.arrival_address.to_s), p.id ] }), 
 				{:prompt => "Выберите из списка адрес прибытия специалистов"}, {:class => "selectize", required: ""  }%>
 
 				</div>
@@ -47,7 +47,9 @@
 				</div>
 			</div>
 		</div>
+
 		<hr>
+
 		<div class="row">
 			<div class="form-group">
 			<label class=" col-xs-3">Тип работ</label>
@@ -70,7 +72,7 @@
 			</div>
 		</div>
 
-			<hr style = "margin-left: -625px;">
+		<hr>
 
 
 		<div class="row" id="info" style="display:none">
@@ -79,9 +81,10 @@
 			  <div class="col-xs-5">
 			  <%= f.text_field :info, :placeholder =>"Опишите проблему", class: "form-control"%>
 			</div>
-			<hr style = "margin-left: -625px;">
+			
 			</div>
 		</div>
+		<hr>
 		<div class="row">
 			<div class="form-group">
 			  <label class=" col-xs-3">Комментарий</label>
