--- a/app/views/buildings/show.html.erb
+++ b/app/views/buildings/show.html.erb
@@ -8,7 +8,7 @@
     <tr>
       <th>Объект</th>
 
-      <th><%= @building.contracts.first.company if @building.contracts.first %></th>
+      <th><%= @building.name %></th>
     </tr>
     <tr>
       <td>Адрес</td>
