--- a/app/views/requistions/show.html.erb
+++ b/app/views/requistions/show.html.erb
@@ -5,7 +5,7 @@
   <table class="table table-bordered table-striped">
   <tr>
     <th>Объект</th>
-    <td><%= @requistion.object %></td>
+    <td><%= @requistion.building.name %></td>
   </tr>
   <tr>
     <th>Адрес вызова</th>
