--- a/app/views/requistions/edit.html.erb
+++ b/app/views/requistions/edit.html.erb
@@ -6,7 +6,7 @@
 				<div class="form-group">
 					<label class="col-md-3 control-label">Объект</label>
 					<div class="col-md-5">
-					<input class="form-control" type="text" placeholder="<%= @requistion.object %>" readonly></input>
+					<input class="form-control" type="text" placeholder="<%= @requistion.building.name %>" readonly></input>
 					</div>
 				</div>
 			</div>
