--- a/app/views/requistions/show.html.erb
+++ b/app/views/requistions/show.html.erb
@@ -61,19 +61,9 @@
 
 
 <% if current_user.admin? %>
-  <div class="row">
-
-</div>
-  <div class = "col-xs-1">
-    <button class="btn btn-danger mark" data-toggle="modal" data-target="#status" >Изменить статус</button>
-  </div>
-    <div class = "col-xs-1">
-    <%= button_to "Редактировать заявку", edit_requistion_path, method: :get, class: "btn btn-large btn-primary" %>
-  </div>
-  <br><br>
-  <div class = "col-md-1">
-    <%= link_to "Назад к заявкам", {controller: "requistions", action: "index"}, class: "btn"%> 
-  </div>
+    <a class="btn" data-toggle="modal" data-target="#status" >Изменить статус</a>
+    <%= link_to "Редактировать заявку", edit_requistion_path, class: "btn" %>
+    <%= link_to "Назад к заявкам", requistions_path, class: "btn"%> 
 
   </div>
   <div class="modal fade" id="status" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
