--- a/app/views/bosses/new.html.erb
+++ b/app/views/bosses/new.html.erb
@@ -15,14 +15,14 @@
 
 		<div class="form-group">
 			<label>Сотовый телефон</label>
-			<%= f.text_field :phone, class: "form-control phonemask", required: "" %>
+			<%= f.text_field :phone, class: "form-control phonemask" %>
 		</div>
 		<div class="form-group">
 			<label>Район</label>
 			<%= f.text_field :region, class: "form-control" %>
 		</div>
 		<div class="form-group">
-			<label>Сотовый телефон</label>
+			<label>Специализация</label>
 			<%= f.text_field :specialization, class: "form-control" %>
 		</div>
 
@@ -36,7 +36,7 @@
 		</div>
 
 		<br>
-			<%= f.submit "Создать начальника", class: "btn btn-large btn-primary " %>
+			<%= f.submit "Создать начальника", class: "btn" %>
 		<br>
 		<% end %>
 	</div>
