refact some code

--- a/app/views/bosses/edit.html.erb
+++ b/app/views/bosses/edit.html.erb
@@ -40,7 +40,7 @@
 		</div>
 
 		<br>
-			<%= f.submit "Сохранить", class: "btn btn-large btn-primary " %>
+			<%= f.submit "Сохранить", class: "btn" %>
 		<br>
 		<% end %>
 
