--- a/app/views/buildings/new.html.erb
+++ b/app/views/buildings/new.html.erb
@@ -31,7 +31,7 @@
 		<div class="row">
 			<div class=" col-md-3"></div>
 			<div class="col-md-5">
-			<%= f.submit "Сохранить", class: "btn btn-large btn-primary" %>
+			<%= f.submit "Сохранить", class: "btn" %>
 			</div>
 		</div>
 	<% end %>
