--- a/app/views/contracts/edit.html.erb
+++ b/app/views/contracts/edit.html.erb
@@ -75,8 +75,8 @@
 		</div>
 
 			<br>	
-		<%= f.submit "Принять", class: "btn btn-large btn-primary", id: "submut" %>
-		<%= link_to "Назад к контрактам", {controller: "contracts", action: "index"}, class: "btn"%>		
+		<%= f.submit "Принять", class: "btn", id: "submut" %>
+		<%= link_to "Назад к контрактам", contracts_path, class: "btn"%>		
 		<% end %>
 
 </div>
