--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -10,7 +10,7 @@
 			<label> Почта </label>
 			<%= f.text_field :email, class: "form-control", required: "" %>
 		</div>
-		<%= f.submit "Сменить парль", class: "btn btn-large btn-primary" %>
+		<%= f.submit "Сменить парль", class: "btn" %>
 	<% end %>
 </div>
 	<div class="col-md-4">
