--- a/app/views/requistions/edit.html.erb
+++ b/app/views/requistions/edit.html.erb
@@ -160,8 +160,8 @@
 <div class="row">
 	<div class=" col-xs-3"></div>
 	<div class="col-xs-5">
-		<%= f.submit "Принять", class: "btn btn-large btn-primary", id: "submut" %>	
-		<%= link_to "Назад к заявкам", {controller: "requistions", action: "index"}, class: "btn"%>
+		<%= f.submit "Принять", class: "btn", id: "submut" %>	
+		<%= link_to "Назад к заявкам", requistions_path, class: "btn"%>
 	</div>
 </div>				
 
