--- a/app/views/static_pages/panel.html.erb
+++ b/app/views/static_pages/panel.html.erb
@@ -37,9 +37,9 @@
 	</div>
 	<div class="col-md-4">
 		<div class="btn-group-vertical" role="group">
-			<%= link_to "Создать нового пользователя", '/admin_new', class:"btn" %>
-			<%= link_to "Создать нового начальника", '/bosses/new', class:"btn" %>
-			<%= link_to "Новый объект", {controller: "buildings", action: "new"}, class: "btn"%> 
+			<%= link_to "Создать нового пользователя", '/admin_new', class: "btn" %>
+			<%= link_to "Создать нового начальника", '/bosses/new', class: "btn" %>
+			<%= link_to "Новый объект", new_building_path, class: "btn"%> 
 		</div>
 	</div>
 	<div class="col-md-4">
