--- a/app/views/users/admin_new.html.erb
+++ b/app/views/users/admin_new.html.erb
@@ -44,7 +44,7 @@
 			</div>
 
 		<br>
-			<%= f.submit "Создать", class: "btn btn-large btn-primary " %>
+			<%= f.submit "Создать", class: "btn" %>
 		<br>
 		<% end %>
 	</div>
