--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -36,7 +36,7 @@
 		</div>
 
 		<br>
-			<%= f.submit "Создать мой профиль", class: "btn btn-large btn-primary " %>
+			<%= f.submit "Создать мой профиль", class: "btn" %>
 		<br>
 		<% end %>
 	</div>
