--- a/app/views/bosses/choose.html.erb
+++ b/app/views/bosses/choose.html.erb
@@ -14,7 +14,7 @@
 		</div>
 
 		<br>
-			<%= f.submit "Назначить", class: "btn btn-large btn-primary " %>
+			<%= f.submit "Назначить", class: "btn" %>
 		<br>
 		<% end %>
 	</div>
