--- a/app/views/buildings/index.html.erb
+++ b/app/views/buildings/index.html.erb
@@ -3,7 +3,7 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<h1 style="text-align:center">Все объекты</h1>
-			<%= link_to "Новый объект", {controller: "buildings", action: "new"}, class: "btn"%> 
+			<%= link_to "Новый объект", new_building_path, class: "btn"%> 
 			<table id="buildings" class="table table-bordered table-striped">
 				<thead>
 				<tr>
@@ -17,20 +17,19 @@
 				</tr>
 				</thead>
 				<tbody>
-				<% @buildings.each do |b| %>
+					<% @buildings.each do |b| %>
 					<tr>
 						<td><%= b.id %></td>
 						<th><%= b.contracts.first.company if  b.contracts.first %> </th>
-						<td><%= link_to b.arrival_address,  {:action => :show, :id => b.id}, {:method => :get} %></td>
+						<td><%= link_to b.arrival_address,  building_path(b) %></td>
 						<td><%= b.contact_name %></td>
 						<td><%= b.contact_phone %></td>						
 						<td><% b.contracts.each do |contract| %> <%=contract.description%> <% end %> </td>
 						<td><%= link_to 'Заявки', {:controller => :requistions, :action => :index, :position =>2, :value => b.id}, {:method => :get} %></td>
 					</tr>
-				<% end %>
+					<% end %>
 				</tbody>
 			</table>
 		</div>
-	</div>
-	  
+	</div>	  
 </div>
