--- a/app/views/contracts/new.html.erb
+++ b/app/views/contracts/new.html.erb
@@ -59,7 +59,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-4">
-			<%= f.submit "Сохранить", class: "btn btn-large btn-primary" %>
+			<%= f.submit "Сохранить", class: "btn" %>
 			</div>
 		</div>
 	</div>
