--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -25,7 +25,7 @@
 				<%= f.password_field :password_confirmation, class: "form-control", required: "", minlength:"6" %>
 			</div>
 
-			<%= f.submit "Обновить пароль", class: "btn btn-large btn-primary" %>
+			<%= f.submit "Обновить пароль", class: "btn" %>
 		<% end %>
 		</div>
 	<div class="col-md-4">
