--- a/app/views/requistions/new.html.erb
+++ b/app/views/requistions/new.html.erb
@@ -106,7 +106,7 @@
 		<div class="row">
 			<div class=" col-xs-3"></div>
 			<div class="col-xs-5">
-				<%= f.submit "Подать заявку", class: "btn btn-large btn-primary" %>
+				<%= f.submit "Подать заявку", class: "btn" %>
 			</div>
 		</div>
 	<% end %>
