--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -27,7 +27,7 @@
 
 
 		<br>
-		<%= f.submit "Сохранить", class: "btn btn-large btn-primary" %>
+		<%= f.submit "Сохранить", class: "btn" %>
 		<% end %>
 		
 
